lab3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: itdt-frontend
  ports:
  - port: 3000
    targetPort: 3000
